[tool.poetry]
name = "yc-crawler"
version = "0.1.0"
description = ""
authors = ["Vladimir Papkov <vladimir.papkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
lxml = "^4.8.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
